# credit-scoring-model-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
model/: model.onnx  model.pkl
src/: dashboard.py  data_prep.py  train.py  verify_model.py
src/api/: main.py  schemas.py
tests/: test_api.py
