[tool.poetry]
name = "credit-scoring-p6"
version = "0.1.0"
description = "Credit Scoring Project with MLOps"
authors = ["Iyed Jaziri <iyedjaziri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"

lightgbm = "^4.0.0"
xgboost = "^2.0.0"
imbalanced-learn = "^0.11.0"
mlflow = "^2.7.0"
shap = "^0.42.0"

matplotlib = "^3.8.0"
seaborn = "^0.13.0"

requests = "^2.31.0"
tqdm = "^4.66.0"
loguru = "^0.7.2"

# API & Web
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
streamlit = "^1.31.0"
httpx = "^0.26.0"
pydantic = "^2.6.0"
onnx = "^1.20.0"
onnxruntime = "^1.23.2"
onnxmltools = "^1.14.0"
protobuf = "^6.33.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"
pylint = "^3.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ['tests/', 'notebooks/']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=scripts --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
